--- a/style.css
+++ b/style.css
@@ -74,15 +74,14 @@ body{
 .dn{
 	display: none;
 }
-section{
-	padding: 100px 0;
-}
+
 .sec_tit{
 	font-weight: 800;
-	font-size: 42px;
+	font-size: 51px;
 	line-height: 57px;
-	text-align: center;
 	margin: 0 auto;
+	width: 679px;
+	margin: 19% 0 0;
 }
 .color{
 	color: #BE963F;
@@ -97,7 +96,7 @@ section{
 	color: #BE963F;
 }
 .btn {
-	background: #1e84ff;
+	background: #abd1ff;
     font-weight: 800;
     text-align: center;
     text-transform: uppercase;
@@ -120,44 +119,75 @@ input, button, textarea {
     font-weight: inherit;
 }
 .btn:hover{
-	box-shadow: 0px 6px 5px 2px #0b528c;
+	box-shadow: 0px 6px 5px 2px #4b7395;
 }
 .flex{
 	display: flex;
 }
+
 .header{
 	justify-content: space-around;
-	padding-top: 50px;
-	background: #002fed;
+    padding: 2% 0 2%;
+	background: #69c2c1;
 }
+nav{
+margin-top: 18px;
+}
+.icon{
+	width: 5%;
+}
+.phon{
+	margin-top: 18px;
+}
+.header_link,
+.phon{
+	color:white;
+   font-family: Magistral;
+   font-size: 22px;
+   font-style: normal;
+   font-weight: 500;
+   line-height: normal;
+   margin-right: 35px;
+   transition: 0.5s;
+   }
+.header_link:hover,
 .phon:hover{
- color: #656363;
+	color: #242424;
 }
-.phon {
-  color: #000000;
-  font-family: Open Sans;
-  font-size: 23px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-decoration: none;
-  transition: 0.8s;
+.sec_txt{
+	color: var(--, #F6F6E9);
+font-family: Magistral;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+letter-spacing: 0.4px;
+margin: 3% 0 3%;
+width: 529px;
 }
-.header_link {
-  color: #000000;
-  font-family: "Open Sans";
-  font-size: 23px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-  text-decoration: none;
-  margin-right: 25px;
-  transition: 0.5s;
+.btn__2{
+    height: 56px;
+    width: 29%;
 }
-.header_link:hover{
- color: #656363;
+.beg_stroke{
+   font-size: 30px;
+   color:#373737;
+   border: 4px dashed #69c2c1;
+   padding: 1%;
 }
-.logotip{
-	width: 19%;
-    height: 67%;
+.stroke{
+	padding: 100px 0;
+}
+.footer_link{
+	color: black;
+}
+.footer_img{
+	margin-right: 3%;
+}
+.footer_img__1{
+	margin-top: 30px;
+}
+footer{
+	background: #69c2c1;
+	padding: 2% 0 2%;
 }
