--- a/style.css
+++ b/style.css
@@ -212,3 +212,114 @@ footer{
 	margin-left: -241%;
 }
 
+.btn_input {
+    text-align: center;
+    width: 100%;
+    height: 64px;
+    background: #69c2c1;
+    padding: 15px 250px;
+    border-radius: 18px;
+}
+
+.form-wrap {
+    padding-bottom: 0;
+    margin-bottom: -440px;
+    z-index: 10;
+    position: relative;
+}
+
+.map {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.sec_desc {
+	margin: 0 0 80px;
+  }
+.btn_red{
+	width: 110%;
+	border-radius: 18px;
+	
+}
+  .table_in {
+	border-radius: 16px;
+	border: 1px solid #fff;
+	background: #fff;
+	max-width: 812px;
+	margin: 0 auto;
+	padding: 43px 50px 50px;
+	flex-wrap: wrap;
+	background: #efefef;
+    box-shadow: 6px 6px darkgray;
+  }
+  
+  .table_txt {
+	color: #2C2F24;
+	font-size: 16px;
+	font-weight: 700;
+	line-height: 24px;
+	/* 150% */
+	margin-bottom: 8px;
+	display: block;
+  }
+  
+  .table_input-in {
+	border-radius: 72px;
+	border: 1px solid #DBDFD0;
+	margin-bottom: 24px;
+	padding: 0 24px;
+  }
+  
+  .input {
+	line-height: 56px;
+	font-size: 16px;
+  }
+  
+  .table_input {
+	width: calc(50% - 12px);
+  }
+  
+  .table_input__big {
+	width: 100%;
+  }
+  
+  .table_input__verybig {
+	width: 100%;
+	height: 156px;
+	border-radius: 16px;
+  }
+  
+  .reserved {
+	gap: 90px;
+	justify-content: center;
+	margin: 80px;
+  }
+  
+  .reserv_tit {
+	color: #2C2F24;
+	font-size: 20px;
+	font-weight: 700;
+	line-height: 26px;
+	/* 130% */
+  }
+  
+  .reserv_number {
+	color: #AD343E;
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 30px;
+	/* 125% */
+	letter-spacing: -0.72px;
+  }
+  
+  .reserv_txt {
+	width: 187px;
+	color: #2C2F24;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 28px;
+	/* 155.556% */
+  }
+  .contact{
+	padding: 100px;
+  }
